--- a/_includes/contacts.html
+++ b/_includes/contacts.html
@@ -19,9 +19,11 @@
               <div class="textwidget">
                 <!-- <p>ИНН: 1650279880</p> -->
                 <!-- <p>ОГРН: 1141650003252</p> -->
-                <p><a href="http://чац.рф">чац.рф</a> </p>
+                <!-- <p><a href="http://чац.рф">чац.рф</a> </p> -->
                 <p><a href="https://chelnyagregatcentre.ru">chelnyagregatcentre.ru</a> </p>
+                <p><a href="https://krasnodar.chelnyagregatcentre.ru/"> Краснодар </a></p>
                 <p><a href="#~" class="small nal-link" data-toggle="modal" data-target="#regions-modal">регионы доставки</a></p>
+                
               </div>
             </div>
           </div>
@@ -56,6 +58,8 @@
               <div class="geo__text">
                 г. Набережные Челны, Мензелинский тракт, 122а
               </div>
+              
+               
             </div>
 
 
