--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,10 +7,10 @@
           <ul class="list-inline">
             <li class="list-inline-item">
                 <p>© 2009 <a href="/chelny_agregat_center_000.html"> Челны Агрегат Центр </a>, Все права защищены 
-                 &nbsp;&nbsp;&nbsp;<a href="/dostavka-dvigatel-kamaz/" title="Продажа Двигателей"> <i class="lni-map"></i>
-                  &nbsp;<a href="/dostavka-reductor-kamaz/" title="Продажа Редукторов"> <i class="lni-map"></i>
-                  &nbsp;<a href="/dostavka-korobki-kpp-kamaz/" title="Продажа КПП Коробок передач"> <i class="lni-map"></i>
-                  &nbsp;<a href="/kamaz-inf/articles.html">доп.инфо</a>
+                 &nbsp;&nbsp;&nbsp;<a href="/dostavka-dvigatel-kamaz/" title="Продажа Двигателей">-</a>
+                  &nbsp;<a href="/dostavka-reductor-kamaz/" title="Продажа Редукторов">-</a>
+                  &nbsp;<a href="/dostavka-korobki-kpp-kamaz/" title="Продажа КПП Коробок передач">-</a>
+                  &nbsp;<a href="/kamaz-inf/articles.html">-</a>
                 </p>
             </li>
             <li class="list-inline-item">
