--- a/_includes/card_template_kpp.html
+++ b/_includes/card_template_kpp.html
@@ -36,6 +36,11 @@
             <tr> <td>{{ product.price3_n }}</td>
               <td style="text-align: right;"><span style="font-size:1.2em;">{{ product.price3 }} </span> руб.</td> </tr>
             {%- endif -%}
+
+            {%- if product.price4 != "" -%}
+            <tr> <td>{{ product.price4_n }}</td>
+              <td style="text-align: right;"><span style="font-size:1.2em;">{{ product.price4 }} </span> руб.</td> </tr>
+            {%- endif -%}
           
             {%- if product.prim != "" -%}
             <tr><td> применяемость </td>
