--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,8 +29,24 @@
           
           <small style="line-height:0.8em;">Данный сайт носит исключительно информационный характер и не является публичной офертой, определяемой в ст.437 ГК&nbsp;РФ.
               <br> Цены и информация могут быть устаревшими. Копирование информации с сайта запрещено.</small>
-             
+            
         </div>
+        <div class="col-md-10 wa">
+        <table>
+          <tr>
+            <td>
+              <a href="https://i-tend.ru/" alt="Разработка сайта - студия Айтенд">
+                <img src="https://i-tend.ru/wp-content/uploads/2020/06/logo_100.png" alt="Разработка сайта и SEO продвижение - студия Айтенд"/>
+              </a>
+            </td>
+            <td>
+              <a href="https://i-tend.ru/" alt="Разработка и SEO продвижение сайта - студия Айтенд">
+                <p>Айтенд - разработка и продвижение сайта</p>
+              </a>
+            </td>
+          </tr>
+        </table> 
+      </div>
       </div>
     </div>
   </div>
