--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,17 +31,17 @@
               <br> Цены и информация могут быть устаревшими. Копирование информации с сайта запрещено.</small>
             
         </div>
-        <div class="col-md-10 wa">
+        <div class="wa text-center">
         <table>
           <tr>
             <td>
               <a href="https://i-tend.ru/" alt="Разработка сайта - студия Айтенд">
-                <img src="https://i-tend.ru/wp-content/uploads/2020/06/logo_100.png" alt="Разработка сайта и SEO продвижение - студия Айтенд"/>
+                <img src="https://i-tend.ru/wp-content/uploads/2020/06/logo_100.png"  style="max-height: 60px;" alt="Разработка сайта и SEO продвижение - студия Айтенд"/>
               </a>
             </td>
             <td>
               <a href="https://i-tend.ru/" alt="Разработка и SEO продвижение сайта - студия Айтенд">
-                <p>Айтенд - разработка и продвижение сайта</p>
+                <small>Айтенд - разработка и продвижение сайта</small>
               </a>
             </td>
           </tr>
