--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,8 @@
               <br> Цены и информация могут быть устаревшими. Копирование информации с сайта запрещено.</small>
             
         </div>
-        <div class="wa text-center">
+        <hr>
+        <div class="wa text-center" style="margin: auto;">
         <table>
           <tr>
             <td>
