--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,12 +36,12 @@
         <table>
           <tr>
             <td>
-              <a href="https://i-tend.ru/" alt="Разработка сайта - студия Айтенд">
+              <a href="https://i-tend.ru/" title="Разработка сайта - студия Айтенд">
                 <img src="https://i-tend.ru/wp-content/uploads/2020/06/logo_100.png"  style="max-height: 60px;" alt="Разработка сайта и SEO продвижение - студия Айтенд"/>
               </a>
             </td>
             <td>
-              <a href="https://i-tend.ru/" alt="Разработка и SEO продвижение сайта - студия Айтенд">
+              <a href="https://i-tend.ru/" title="Разработка и SEO продвижение сайта - студия Айтенд">
                 <small>Айтенд - разработка и продвижение сайта</small>
               </a>
             </td>
